added add event button

--- a/GroupMeetup/GroupMeetup/GroupMeetup.csproj
+++ b/GroupMeetup/GroupMeetup/GroupMeetup.csproj
@@ -18,6 +18,9 @@
     <EmbeddedResource Update="SigninPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="TabbedPages\AdditionalPages\AddEventPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="TabbedPages\ChatPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
