--- a/GroupMeetup/GroupMeetup.Android/GroupMeetup.Android.csproj
+++ b/GroupMeetup/GroupMeetup.Android/GroupMeetup.Android.csproj
@@ -144,7 +144,7 @@
     <AndroidResource Include="Resources\drawable\logout_logo.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\others_logo.png" />
+    <Content Include="Resources\drawable\account_logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
