--- a/GroupMeetup/GroupMeetup/GroupMeetup.csproj
+++ b/GroupMeetup/GroupMeetup/GroupMeetup.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Mzsoft.BCrypt" Version="1.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Net.Http" Version="4.3.3" />
+    <PackageReference Include="Xamarin.Auth" Version="1.6.0.2" />
+    <PackageReference Include="Xamarin.Auth.Extensions" Version="1.6.0.2" />
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
     <PackageReference Include="Xamarin.Forms.Maps" Version="3.1.0.697729" />
   </ItemGroup>
@@ -47,5 +49,9 @@
     <EmbeddedResource Update="Views\TabbedPages\SettingsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="NETStandard.Library" Version="2.0.3" />
   </ItemGroup>
 </Project>
