--- a/GroupMeetup/GroupMeetup.Android/GroupMeetup.Android.csproj
+++ b/GroupMeetup/GroupMeetup.Android/GroupMeetup.Android.csproj
@@ -57,11 +57,17 @@
     <PackageReference Include="Mzsoft.BCrypt">
       <Version>1.0.0</Version>
     </PackageReference>
+    <PackageReference Include="NETStandard.Library">
+      <Version>2.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
     </PackageReference>
     <PackageReference Include="System.Net.Http">
       <Version>4.3.3</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.Support.Compat">
+      <Version>27.0.2.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.v4">
       <Version>27.0.2.1</Version>
