--- a/GroupMeetup/GroupMeetup.Android/GroupMeetup.Android.csproj
+++ b/GroupMeetup/GroupMeetup.Android/GroupMeetup.Android.csproj
@@ -155,5 +155,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\others_logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\notification_logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
