--- a/GroupMeetup/GroupMeetup.Android/GroupMeetup.Android.csproj
+++ b/GroupMeetup/GroupMeetup.Android/GroupMeetup.Android.csproj
@@ -54,6 +54,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DurianCode.PlacesSearchBar">
+      <Version>2.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Mzsoft.BCrypt">
       <Version>1.0.0</Version>
     </PackageReference>
@@ -65,6 +68,9 @@
     </PackageReference>
     <PackageReference Include="System.Net.Http">
       <Version>4.3.4</Version>
+    </PackageReference>
+    <PackageReference Include="Xam.Plugin.Geolocator">
+      <Version>4.5.0.6</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Compat">
       <Version>27.0.2.1</Version>
@@ -84,6 +90,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeviceSerial.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
