--- a/GroupMeetup/GroupMeetup/GroupMeetup.csproj
+++ b/GroupMeetup/GroupMeetup/GroupMeetup.csproj
@@ -6,9 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DurianCode.PlacesSearchBar" Version="2.0.1" />
     <PackageReference Include="Mzsoft.BCrypt" Version="1.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="Xam.Plugin.Geolocator" Version="4.5.0.6" />
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.871581" />
     <PackageReference Include="Xamarin.Forms.Maps" Version="3.2.0.871581" />
   </ItemGroup>
